--- a/node/package.json
+++ b/node/package.json
@@ -13,6 +13,7 @@
     "supertest": "^1.0.1"
   },
   "dependencies": {
-    "express": "4.13.3"
+    "express": "4.13.3",
+    "jshint": "^2.8.0"
   }
 }
