--- a/node/package.json
+++ b/node/package.json
@@ -10,10 +10,10 @@
   "devDependencies": {
     "chai": "^3.2.0",
     "mocha": "2.2.5",
-    "supertest": "^1.0.1"
+    "supertest": "^1.0.1",
+    "jshint": "^2.8.0"
   },
   "dependencies": {
-    "express": "4.13.3",
-    "jshint": "^2.8.0"
+    "express": "4.13.3"
   }
 }
